# nogravity

./: README.TXT
rlx32/include/: _rlx.h  _rlx32.h  _stub.h  config.h  fixops.h  gui_os.h  gx_cdc.h  gx_csp.h  gx_flc.h  gx_init.h  gx_rgb.h  gx_struc.h  gx_text.h  gx_tools.h  iss_av.h  iss_defs.h  iss_fx.h  rlx.h  rlx_gx  rlx_iss  rlx_system  sys_gi.h  syscpu.h  sysctrl.h  sysini.h  syslist.h  sysnetw.h  sysresmx.h  systime.h  systools.h  v3x  v3x_1.h  v3x_2.h  v3xcoll.h  v3xdefs.h  v3xfloat.h  v3xmaps.h  v3xmaths.h  v3xrend.h  v3xscene.h  (+3 more)
rlx32/include/beos/: stub.h
rlx32/include/win32/: dxerr.h  gx_dx.h  sys_di.h  w32_dx.h
rlx32/src/: _stub.cpp  gui_os.c  gx_alloc.c  gx_csp.c  gx_flc.c  gx_form.c  gx_init.c  gx_png.c  gx_rgb.c  gx_tool.c  iss_av.c  iss_cdc.c  iss_db.c  iss_form.c  iss_ogg.c  sysgi.c  sysini.c  syslist.c  sysresmx.c  systools.c  syszlib.c  v3x_1.c  v3x_2.c  v3x_3.c  v3x_old.h  v3x_priv.h  v3xcoll.c  v3xdata.c  v3xmaps.c  v3xrend.c  v3xscen2.c  v3xscene.c  v3xsoft.c
rlx32/src/beos/: _stub_beos.cpp  gx_bdirectwin.cpp  gx_bdirectwindow.cpp  gx_bdirectwindow.h  gx_bwindowscreen.cpp  gx_bwindowscreen.h  gx_bws.cpp  gx_mem.c  snd_mediakit.cpp  sysdbg.cpp  sysio.c  sysjoys.cpp  syskeyb.cpp  sysmouse.c  sysmouse.cpp  sysnet.c  sysreg.c  systime.c
rlx32/src/dummy/: snd.c  stub.cpp  sysio.c  sysjoy.c  syskeyb.c  sysmouse.c  sysreg.c  systime.c
rlx32/src/linux/: _stublinux.cpp  gx_sdl.cpp  snd.c  snd_none.c  snd_openal.c  snd_sdlmixer.c  sysdbg.c  sysjoy.c  syskeyb.c  sysmouse.c  sysnet.c  sysreg.c  systime.c  systool2.c
rlx32/src/macos/: _stubmacos.cpp  snd_coreaudio.cpp  sysdbg.c  sysjoys.c  syskeyb.c  sysmouse.c  sysnet.c  sysreg.c  systime.c  systools.c
rlx32/src/renderers/dummy/: dummy_gx.c  dummy_v3x.c  dummy_v3x.h
rlx32/src/renderers/dx6/: d3ddrv.cpp  d3ddrv.h
rlx32/src/renderers/gfx_ref/: gr16bit.c  gr32bit.c  gr8bit.c  gx_c.h  gx_drv.c  sp.h  sp16bit.c  sp32bit.c  sp8bit.c
rlx32/src/renderers/glide/: glide.cpp  glidemem.cpp  glidemem.h
rlx32/src/renderers/opengl/: gl_gx.cpp  gl_v3x.cpp  gl_v3x.h
rlx32/src/renderers/opengl/beos/: bdirectglwindow.cpp  be_gl.cpp  dwgl.cpp  dwgl.h  gl_be.cpp
rlx32/src/renderers/opengl/linux/: sdl_gl.cpp
rlx32/src/renderers/opengl/macos/: agl_gl.cpp  cgl_gl.cpp
rlx32/src/renderers/opengl/win32/: w32_gl.cpp  wglext.cpp  wglext.h
rlx32/src/renderers/v3x_ref/: poly.hpp  r08_128.c  r08_256.c  r16_128.c  r16_256.c  r32_256.c  rd_128.hpp  rd_256.hpp  rdz_256.hpp  tripoly.hpp  v3xref.c  v3xref.h  v3xref.hpp  v3xsoft.c  z08_256.c  z16_256.c  z32_256.c
rlx32/src/win32/: _stubw32.cpp  dxerr.c  gx_dx6.cpp  snd_ds6.cpp  snd_ds6.h  snd_eax.cpp  snd_eax.h  sysdbg.c  sysjoy.cpp  syskeyb.cpp  sysmouse.cpp  sysnetw.cpp  sysreg.c  sysregw.c  systime.c  systools.c
src/: _nginfo.h  _stubini.h  ccmx.c  console.c  console.h  lithium.c  lt_cmx.h  lt_conf.h  lt_data.c  lt_data.h  lt_func.h  lt_fx.c  lt_game.c  lt_game2.c  lt_info.c  lt_input.c  lt_menu.c  lt_reso.c  lt_save.c  lt_sound.c  lt_st2.c  lt_start.c  lt_struc.h  lt_video.c  lt_weap.c
src/BeOS/: ng_soft.proj  ng_softR5.proj  nogravity.proj  nogravity.rsrc  nogravityR5.proj  preferences.c
src/Linux/: Makefile  Makefile.am  bootstrap  config.h.in  configure.in  nogravity.spec  nogravity.spec.in  preferences.c
src/Linux/autopackage/: nogravity.apspec
src/MacOSX/: Info.plist  ng_Prefix.pch  nogravity.icns  preferences.c
src/MacOSX/English.lproj/: InfoPlist.strings
src/MacOSX/ng.xcode/: project.pbxproj
src/MacOSX/nogravity.tiger.xcode/: project.pbxproj
src/MacOSX/nogravity.xcodeproj/: project.pbxproj
src/VC7.1/: nogravity.sln  preferences.c
src/VC7.1/ng_d3d/: ng_d3d.vcproj
src/VC7.1/ng_game/: ng_game.vcproj
src/VC7.1/ng_glide/: ng_glide.vcproj
src/VC7.1/ng_opengl/: ng_opengl.vcproj
src/VC7.1/ng_soft/: ng_soft.def  ng_soft.vcproj
src/VC7.1/ng_w32/: ng_w32.rc  ng_w32.vcproj  resource.h
src/Zeta/: ng_opengl  ng_soft.proj  nogravity.proj  preferences.c
src/amiga/: Makefile.am  NoGravity256Icon.info  NoGravity_PNGicon.info  bootstrap  configure.in  preferences.c
